<resources>
    <string name="app_name">Aficionado</string>
    <!-- Strings related to login -->
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Welcome!"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>
    <string name="title_welcome_page">Selamat datang di Aficionado!</string>
    <string name="message_welcome_page">Aficionado, tempat untuk berbagi berbagai hal yang menarik untuk diri anda\n</string>
    <string name="login">Login</string>
    <string name="signup">Register</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="registerTitle">Lengkapi data diri untuk mendaftar</string>
    <string name="name">Name:</string>
    <string name="email">Email:</string>
    <string name="password">Password:</string>
    <string name="tv_title_login">Are you ready to find your taste?</string>
    <string name="tv_subtitle_login">Login to your account</string>
    <string name="Register">Register</string>
    <string name="or">or</string>
    <string name="welcome_image">Welcome Image</string>
    <string name="banner_login">Banner Login</string>
    <string name="home">Home</string>
    <string name="upload_story">Upload</string>
    <string name="map">Map</string>
    <string name="logout">Logout</string>
    <string name="username">Username</string>
    <string name="date_posted">Date Posted</string>
    <string name="story_image">Story Image</string>
    <string name="description">Description:</string>
    <string name="lorem">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Etiam blandit, augue ac tempus pharetra, eros lectus hendrerit nunc, vitae auctor.</string>
    <string name="camera">Camera</string>
    <string name="gallery">Gallery</string>
    <string name="upload">Upload</string>
    <string name="appwidget_text">EXAMPLE</string>
    <string name="add_widget">Add widget</string>
    <string name="app_widget_description">This is an app widget description</string>
    <string name="title_activity_maps">MapsActivity</string>
    <string name="include_location">Include current location</string>
    <string name="title_activity_fullscreen_image">FullscreenImageActivity</string>
    <string name="dummy_button">Dummy Button</string>
    <string name="dummy_content">DUMMY\nCONTENT</string>
    <string name="fullscreen_image_view">Fullscreen image view</string>
    <string name="apps_logo">Apps Logo</string>
    <string name="preview_image">Preview Image</string>
    <string name="error_request_timeout">Error: Request Timeout</string>
    <string name="retry">Retry</string>
    <string name="password_requirement">Requires 8 characters or more!</string>
    <string name="carousel_image">carousel image</string>
    <string name="posted">Posted</string>
    <string name="bookmarked">Bookmarked</string>
    <string name="profile">profile</string>
    <string name="location">location</string>
</resources>