<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <item
        android:id="@+id/to_home"
        android:enabled="true"
        android:title="@string/home"
        android:icon="@drawable/baseline_home_24"
        />
    <item
        android:id="@+id/add_story"
        android:enabled="true"
        android:title="@string/upload"
        android:icon="@drawable/outline_add_box_24"
        />

    <item
        android:id="@+id/to_location"
        android:enabled="true"
        android:title="@string/location"
        android:icon="@drawable/baseline_location_on_24"
        />

    <item
        android:id="@+id/to_profile"
        android:enabled="true"
        android:title="@string/profile"
        android:icon="@drawable/baseline_account_circle_24"
        />
</menu>