<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.main.detail.DetailActivity">

    <com.google.android.material.card.MaterialCardView
        android:id="@+id/cv_detail_story"
        style="@style/Card.theme"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_gravity="center"
        android:layout_marginStart="8dp"
        android:layout_marginTop="4dp"
        android:layout_marginEnd="8dp"
        android:layout_marginBottom="4dp"
        android:transitionName="detail_card"
        app:layout_constraintBottom_toTopOf="@id/bottom_navigation"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <ImageView
                    android:id="@+id/iv_detail_image"
                    android:layout_width="match_parent"
                    android:layout_height="450dp"
                    android:contentDescription="@string/story_image"
                    android:scaleType="centerCrop"
                    android:transitionName="detail_image"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    tools:src="@tools:sample/backgrounds/scenic" />

                <TextView
                    android:id="@+id/tv_detail_username"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="8dp"
                    android:layout_marginTop="4dp"
                    android:layout_marginBottom="4dp"
                    android:text="@string/username"
                    android:textSize="20sp"
                    android:textStyle="bold"
                    android:transitionName="detail_username"
                    app:layout_constraintStart_toStartOf="@id/iv_detail_image"
                    app:layout_constraintTop_toBottomOf="@id/iv_detail_image" />

                <TextView
                    android:id="@+id/tv_detail_description"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="8dp"
                    android:layout_marginTop="4dp"
                    android:layout_marginBottom="4dp"
                    android:text="@string/description"
                    android:textSize="16sp"
                    app:layout_constraintStart_toStartOf="@id/iv_detail_image"
                    app:layout_constraintTop_toBottomOf="@id/tv_detail_username" />

                <TextView
                    android:id="@+id/tv_detail_date"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="4dp"
                    android:layout_marginEnd="8dp"
                    android:layout_marginBottom="4dp"
                    android:text="@string/date_posted"
                    android:textSize="16sp"
                    android:textStyle="italic"
                    android:transitionName="detail_date_posted"
                    app:layout_constraintBottom_toBottomOf="@id/tv_detail_description"
                    app:layout_constraintEnd_toEndOf="@id/iv_detail_image" />

                <com.google.android.material.divider.MaterialDivider
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    app:dividerColor="@color/white"

                    app:dividerInsetEnd="8dp"
                    app:dividerInsetStart="8dp"
                    app:layout_constraintStart_toStartOf="@id/tv_detail_description"
                    app:layout_constraintTop_toBottomOf="@id/tv_detail_description" />

                <TextView
                    android:id="@+id/tv_detail_description_text"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_marginStart="8dp"
                    android:layout_marginTop="4dp"
                    android:layout_marginEnd="8dp"
                    android:layout_marginBottom="4dp"
                    android:justificationMode="inter_word"
                    android:text="@string/lorem"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/tv_detail_description"
                    tools:ignore="VisualLintLongText" />

            </androidx.constraintlayout.widget.ConstraintLayout>

        </ScrollView>
    </com.google.android.material.card.MaterialCardView>

    <com.google.android.material.bottomnavigation.BottomNavigationView
        android:id="@+id/bottom_navigation"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:background="@color/maroon"
        app:itemIconTint="@color/design_default_color_on_primary"
        app:itemTextColor="@color/design_default_color_on_primary"
        app:layout_constraintBottom_toBottomOf="parent"
        app:menu="@menu/bottom_nav_menu" />

</androidx.constraintlayout.widget.ConstraintLayout>